增加封面、版心的绘制，以及性能优化
1. 增加PDF文档的封面、版心绘制。
2. CharTag性能优化。
3. 增加画布默认参数文件。
4. 增加PDF封面预览。
5. 抬头文字背景绘制逻辑性能优化。